MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 1.0.3 alpha
* commandLink javascript error bug fixed
* bug 943210 ("outputLink produces very long URLs that don't work") fixed

----------------------------------------------------------------------
Changes in Release 1.0.2 alpha
* refactored custom components to net.sourceforge.myfaces.custom package
* custom message and messages component with new attributes summaryFormat and detailFormat
* replaced com.oreilly.servlet lib cos.jar by commons-codec for Base64 encoding
* fileupload component now uses commons-fileupload instead of com.oreilly.servlet lib cos.jar
* new tree component
* Weblogic startup issue now fixed when MyFacesServlet is used instead of FacesServlet
* validator attribute now supported
* many many bugfixes

----------------------------------------------------------------------
Changes in Release 1.0.1 alpha
* new DataList component (dynamical List based on UIData - see examples webapp)
* new (speadsheet like) editable table example (see master/detail example in examples webapp)
* x-checked various Renderers for Specs (tlddoc) compliance
* serious bug in UIData fixed
* server state saving bug fixed
* <f:convertNumber> threw NPE - fixed
* HiddenRenderer fixed
* <x:panelTabbedPane> now supports dynamic jsp includes and <f:subview>
* many small bugfixes

----------------------------------------------------------------------
Changes in Release 1.0.0 alpha
* MyFaces has it's own JSF-API Implementation now!
  (Sun's jsf-api.jar will no longer be needed)
* Sun's JSF-RI samples (cardemo, guessNumber) now run with MyFaces!
  (see Documentation on http://myfaces.sourceforge.net)
* all core tags implemented now
* new Calendar component (see examples webapp)  
* Bugfixes

----------------------------------------------------------------------
Changes in Release 0.9.1
* Many, many changes to catch up with final Spec. 1.0
