@@ -25,21 +25,67 @@ import javax.faces.component.UIComponent;
 import javax.faces.context.FacesContext;
 import javax.faces.model.SelectItem;
 import javax.faces.validator.ValidatorException;
+import java.io.Serializable;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 
 /**
- * DOCUMENT ME!
  * @author Thomas Spiegl (latest modification by $Author$)
  * @version $Revision$ $Date$
  */
 public class CarConfigurator
+        implements Serializable
 {
-    private List _cars;
-    private List _colors;
-    private List _extrasList;
+    private static List _cars;
+    private static List _colors;
+    private static List _extrasList;
+    private static HashMap _priceList = new HashMap();
+    private static HashMap _priceFactorColors = new HashMap();
+    private static HashMap _priceListExtras = new HashMap();
+    static
+    {
+        _cars = new ArrayList();
+        _colors = new ArrayList();;
+        _extrasList = new ArrayList();;
+
+        _cars.add(new SelectItem("c1", "Audee X6", null));
+        _cars.add(new SelectItem("c2", "PMW 321u", null));
+        _cars.add(new SelectItem("c3", "Masta ZX7", null));
+        _cars.add(new SelectItem("c4", "Renolt ESP", null));
+        _cars.add(new SelectItem("c5", "WV Lumpo", null));
+        _cars.add(new SelectItem("c6", "James Blond Car", null));
+
+        _colors.add(new LocalizedSelectItem("color_black"));
+        _colors.add(new LocalizedSelectItem("color_blue"));
+        _colors.add(new LocalizedSelectItem("color_marine"));
+        _colors.add(new LocalizedSelectItem("color_red"));
+
+        _extrasList.add(new LocalizedSelectItem("extra_aircond"));
+        _extrasList.add(new LocalizedSelectItem("extra_sideab"));
+        _extrasList.add(new LocalizedSelectItem("extra_mirrowheat"));
+        _extrasList.add(new LocalizedSelectItem("extra_leaderseat"));
+
+        _priceList.put("c1", new BigDecimal(30000));
+        _priceList.put("c2", new BigDecimal(32000));
+        _priceList.put("c3", new BigDecimal(20000));
+        _priceList.put("c4", new BigDecimal(25000));
+        _priceList.put("c5", new BigDecimal(10000));
+        _priceList.put("c6", new BigDecimal(100000000));
+
+        _priceFactorColors.put("color_black", new BigDecimal(1.15));
+        _priceFactorColors.put("color_blue", new BigDecimal(1.10));
+        _priceFactorColors.put("color_marine", new BigDecimal(1.05));
+        _priceFactorColors.put("color_red", new BigDecimal(1.0));
+
+        _priceListExtras.put("extra_aircond", new BigDecimal(510));
+        _priceListExtras.put("extra_sideab", new BigDecimal(1220));
+        _priceListExtras.put("extra_mirrowheat", new BigDecimal(1230));
+        _priceListExtras.put("extra_leaderseat", new BigDecimal(840));
+    }
+
+
     private BigDecimal _price = new BigDecimal(0);
     private String[] _extras;
     private String _discount = "0";
@@ -47,73 +93,24 @@ public class CarConfigurator
     private String _bandName;
     private String _car;
     private String _color;
-    private HashMap _priceList = new HashMap();
-    private HashMap _priceFactorColors = new HashMap();
-    private HashMap _priceListExtras = new HashMap();
+    private boolean _salesTax = false;
 
     public CarConfigurator()
     {
     }
 
-    private void init()
-    {
-        if (_cars == null)
-        {
-            _cars = new ArrayList();
-            _colors = new ArrayList();;
-            _extrasList = new ArrayList();;
-
-            _cars.add(new SelectItem("c1", "Audee X6", null));
-            _cars.add(new SelectItem("c2", "PMW 321u", null));
-            _cars.add(new SelectItem("c3", "Masta ZX7", null));
-            _cars.add(new SelectItem("c4", "Renolt ESP", null));
-            _cars.add(new SelectItem("c5", "WV Lumpo", null));
-            _cars.add(new SelectItem("c6", "James Blond Car", null));
-
-            _colors.add(new LocalizedSelectItem("color_black"));
-            _colors.add(new LocalizedSelectItem("color_blue"));
-            _colors.add(new LocalizedSelectItem("color_marine"));
-            _colors.add(new LocalizedSelectItem("color_red"));
-
-            _extrasList.add(new LocalizedSelectItem("extra_aircond"));
-            _extrasList.add(new LocalizedSelectItem("extra_sideab"));
-            _extrasList.add(new LocalizedSelectItem("extra_mirrowheat"));
-            _extrasList.add(new LocalizedSelectItem("extra_leaderseat"));
-
-            _priceList.put("c1", new BigDecimal(30000));
-            _priceList.put("c2", new BigDecimal(32000));
-            _priceList.put("c3", new BigDecimal(20000));
-            _priceList.put("c4", new BigDecimal(25000));
-            _priceList.put("c5", new BigDecimal(10000));
-            _priceList.put("c6", new BigDecimal(100000000));
-
-            _priceFactorColors.put("color_black", new BigDecimal(1.15));
-            _priceFactorColors.put("color_blue", new BigDecimal(1.10));
-            _priceFactorColors.put("color_marine", new BigDecimal(1.05));
-            _priceFactorColors.put("color_red", new BigDecimal(1.0));
-
-            _priceListExtras.put("extra_aircond", new BigDecimal(510));
-            _priceListExtras.put("extra_sideab", new BigDecimal(1220));
-            _priceListExtras.put("extra_mirrowheat", new BigDecimal(1230));
-            _priceListExtras.put("extra_leaderseat", new BigDecimal(840));
-        }
-    }
-
     public List getCars()
     {
-        init();
         return _cars;
     }
 
     public List getColors()
     {
-        init();
         return _colors;
     }
 
     public List getExtrasList()
     {
-        init();
         return _extrasList;
     }
 
@@ -187,9 +184,18 @@ public class CarConfigurator
         _bandName = bandName;
     }
 
+    public boolean isSalesTax()
+    {
+        return _salesTax;
+    }
+
+    public void setSalesTax(boolean salesTax)
+    {
+        _salesTax = salesTax;
+    }
+
     public String calcPrice()
     {
-        init();
         String car = getCar();
         String color = getColor();
         if (car == null ||
@@ -251,6 +257,11 @@ public class CarConfigurator
             catch (NumberFormatException e)
             {
             }
+        }
+
+        if (_salesTax)
+        {
+            _price = _price.multiply(new BigDecimal(1.2));
         }
 
         return "ok";
