@@ -62,6 +62,7 @@ discount_2_2 = My favourite Band
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Car type
 sort_carcolor = Car color
+sales_tax = Sales Tax
 
 label_country_name = Country
 label_country_iso = Iso-Code
